testsuite/tests/overloadedrecflds/should_fail/T17469.hs
{-# LANGUAGE DuplicateRecordFields #-}

import T17469A

main :: IO ()
main = print MkFoo { foo = "", bar = True }
